syntax = "proto3";

package pb;

option go_package = "./pb";

service VideoCapture {
  rpc ExtractImage (stream VideoCaptureRequest) returns (VideoCaptureReply) {}
  rpc AddOverlay (stream OverlayImageRequest) returns (VideoCaptureReply) {}
}

message VideoCaptureRequest {
  bytes video =1;
  string name = 2;
  int32 width = 3;
  int32 height =4;
  int64 time =5;
}

message OverlayImageRequest{
  bytes original =1;
  bytes overlay=2;
  Position  position=3;
}

message Position{
  int32 x=1;
  int32 y=2;
}

message VideoCaptureReply {
  bytes data =1;
 }
